--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.5.0"
+    ext {
+        kotlin_version = "1.5.0"
+        hilt_version = '2.33-beta'
+        dagger_compiler= "1.0.0-alpha03"
+        dagger_viewModels = "1.0.0-alpha03"
+    }
     repositories {
         google()
         mavenCentral()
@@ -8,6 +13,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.2.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
