--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        kotlin_version = "1.5.0"
+        kotlin_version = "1.4.31"
         hilt_version = '2.33-beta'
         dagger_compiler= "1.0.0-alpha03"
         dagger_viewModels = "1.0.0-alpha03"
+        gson="2.6.0"
+        retrofit="2.6.0"
     }
     repositories {
         google()
