--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,11 @@ dependencies {
             "com.squareup.retrofit2:retrofit:$retrofit"
     )
 
+    // Room
+    implementation "androidx.room:room-runtime:2.3.0"
+    kapt "androidx.room:room-compiler:2.3.0"
+
+    // Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:2.3.0"
+
 }
