--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         </activity>
         <activity android:name=".MainActivity"
             />
+
+        <service android:name=".MyService" />
     </application>
 
 </manifest>
