--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,6 +104,33 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-firestore-ktx'
 
+    testImplementation(
+            'androidx.test:core:1.2.0',
+            'androidx.test.espresso:espresso-contrib:3.1.0',
+            'androidx.test.espresso:espresso-core:3.2.0',
+            'androidx.test.espresso:espresso-intents:3.1.0',
+            'androidx.test.ext:junit:1.1.1',
+            'com.github.bumptech.glide:mocks:4.11.0',
+            'com.google.truth:truth:0.43',
+            'org.robolectric:annotations:4.4',
+            'org.robolectric:robolectric:4.4',
+            'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.2.2',
+            "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version",
+            'org.mockito:mockito-core:2.7.22',
+    )
+    androidTestImplementation(
+            'androidx.test:core:1.2.0',
+            'androidx.test.espresso:espresso-contrib:3.1.0',
+            'androidx.test.espresso:espresso-core:3.2.0',
+            'androidx.test.espresso:espresso-intents:3.1.0',
+            'androidx.test.ext:junit:1.1.1',
+            'com.github.bumptech.glide:mocks:4.11.0',
+            'com.google.truth:truth:0.43',
+            'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.2.2',
+            'org.mockito:mockito-android:2.7.22',
+            'org.robolectric:annotations:4.4',
+    )
+
 }
 
 apply plugin: 'com.google.gms.google-services'
